docs/deployment/overlays/crane/resources/crane.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: minimal-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx-example
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: crane
                            port:
                                number: 80
